--- a/components/index.html
+++ b/components/index.html
@@ -4,8 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Components | Lodestone Cafe</title>
+    <link rel="stylesheet" href="../css/main.css">
+    <script src="https://kit.fontawesome.com/48930d19ff.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <h1>Components Go Here</h1>
+    <h2>navbar</h2>
+    <div class="navbar">
+        <div class="navbar__left">
+            <ul>
+                <li><a href="#!">Home</a></li>
+                <li><a href="#!">Products &#8744;</a></li>
+                <li><a href="#!">Calendar</a></li>
+                <li><a href="#!">Contact Us</a></li>
+                <li><a href="#!">More &#8744;</a></li>
+            </ul>
+        </div>
+        <div class="navbar__right">
+            <form>
+                <input placeholder="Search products..." type="text">
+                <button type="search"><i class="fa-solid fa-magnifying-glass"></i></button>
+            </form>
+            <ul>
+                <li><a href="#!"><i class="fa-solid fa-magnifying-glass-plus"></i></a></li>
+                <li><a href="#!"><i class="fa-solid fa-cart-shopping"></i></a></li>
+                <li><a href="#!"><i class="fa-solid fa-user"></i></a></li>
+            </ul>
+        </div>
+    </div>
 </body>
 </html>
