--- a/components/index.html
+++ b/components/index.html
@@ -9,6 +9,15 @@
 </head>
 <body>
     <h1>Components Go Here</h1>
+    <h2>Header</h2>
+    <div class="header">
+        <div class="header__left">
+            <img src="../img/lodestone-logo-small.png" alt="lodestone logo">
+        </div>
+        <div class="header__right">
+            
+        </div>
+    </div>
     <h2>navbar</h2>
     <div class="navbar">
         <div class="navbar__left">
