--- a/components/index.html
+++ b/components/index.html
@@ -9,13 +9,19 @@
 </head>
 <body>
     <h1>Components Go Here</h1>
-    <h2>Header</h2>
+    <h2>header</h2>
     <div class="header">
         <div class="header__left">
-            <img src="../img/lodestone-logo-small.png" alt="lodestone logo">
+            <a href="#!"><img class="logo" src="../img/lodestone-logo-small.png" alt="lodestone logo"></a>
         </div>
         <div class="header__right">
-            
+            <div class="cart-icon">
+                <a href="#!"><i class="fa-solid fa-cart-plus"></i></a>
+            </div>
+            <div class="my-cart">
+                <div class="my-cart__total">Total</div>
+                <div class="my-cart__amount">&#36;0.00</div>
+            </div>
         </div>
     </div>
     <h2>navbar</h2>
