--- a/components/index.html
+++ b/components/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Components | Lodestone Cafe</title>
     <link rel="stylesheet" href="../css/main.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/48930d19ff.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -12,11 +15,11 @@
     <h2>header</h2>
     <div class="header">
         <div class="header__left">
-            <a href="#!"><img class="logo" src="../img/lodestone-logo-small.png" alt="lodestone logo"></a>
+            <a href="#!"><img width="150" height="75" src="../img/lodestone-logo-small.png" alt="lodestone logo"></a>
         </div>
         <div class="header__right">
             <div class="cart-icon">
-                <a href="#!"><i class="fa-solid fa-cart-plus"></i></a>
+                <a href="#!"><i class="fa-sharp fa-solid fa-cart-shopping"></i></a>
             </div>
             <div class="my-cart">
                 <div class="my-cart__total">Total</div>
