--- a/components/index.html
+++ b/components/index.html
@@ -30,7 +30,7 @@
     <h2>navbar</h2>
     <div class="navbar">
         <div class="navbar__left">
-            <ul>
+            <ul class="navbar__list">
                 <li><a href="#!">Home</a></li>
                 <li><a href="#!">Products &#8744;</a></li>
                 <li><a href="#!">Calendar</a></li>
@@ -43,12 +43,18 @@
                 <input placeholder="Search products..." type="text">
                 <button type="search"><i class="fa-solid fa-magnifying-glass"></i></button>
             </form>
-            <ul>
+            <ul class="navbar__list">
                 <li><a href="#!"><i class="fa-solid fa-magnifying-glass-plus"></i></a></li>
                 <li><a href="#!"><i class="fa-solid fa-cart-shopping"></i></a></li>
                 <li><a href="#!"><i class="fa-solid fa-user"></i></a></li>
             </ul>
         </div>
+    </div>
+    <h2>hero</h2>
+    <div class="hero">
+           <a class="hero__panel" href="#!"><img class="hero-img" src="../img/singles.jpg" alt="magic singles"></a>
+           <a class="hero__" href="#!"><img class="hero-img" src="../img/fdn.png" alt="foundations"></a>
+           <a class="hero__panel" href="#!"><img class="hero-img" src="../img/event.png" alt="events"></a>
     </div>
 </body>
 </html>
