--- a/css/main.css
+++ b/css/main.css
@@ -34,7 +34,7 @@ body {
     max-width: 55rem;
 }
 
-ul {
+.navbar__list {
     margin: 0;
     padding: 0;
     display: inline-flex;
@@ -107,6 +107,32 @@ button {
     padding: 1rem;
     border-radius: 50%;
 }
+
+.hero {
+    margin: 0 auto;
+    display: flex;
+    flex-direction: row;
+    max-width: 900px;
+    justify-content: center;
+}
+
+.hero__panel {
+    margin: 1px;
+    position: relative;
+}
+
+.hero-img {
+    max-width: 480px;
+    filter: saturate(0%);
+}
+
+.hero-img:hover {
+    filter: saturate(100%);
+    transition: all .75s ease-in-out;
+} 
+
+
+
 
 
 
