--- a/components/index.html
+++ b/components/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Components | Lodestone Cafe</title>
     <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="normalize.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
@@ -52,9 +53,16 @@
     </div>
     <h2>hero</h2>
     <div class="hero">
+        <div clas="panel">
            <a class="hero__panel" href="#!"><img class="hero-img" src="../img/singles.jpg" alt="magic singles"></a>
-           <a class="hero__" href="#!"><img class="hero-img" src="../img/fdn.png" alt="foundations"></a>
+           <h2 class="panel-title">MAGIC SINGLES</h2>
+        </div>
+        <div class="panel">
+           <a class="hero__panel" href="#!"><img class="hero-img" src="../img/fdn.png" alt="foundations"></a>
+        </div>
+        <div class="panel">
            <a class="hero__panel" href="#!"><img class="hero-img" src="../img/event.png" alt="events"></a>
+        </div>
     </div>
 </body>
 </html>
