--- a/components/index.html
+++ b/components/index.html
@@ -35,11 +35,11 @@
         <div class="navbar">
             <div class="navbar__left">
                 <ul class="navbar__list">
-                    <li class="navbar-item"><a href="#!">Home</a></li>
-                    <li class="navbar-item"><a href="#!">Products &#8744;</a></li>
-                    <li class="navbar-item"><a href="#!">Calendar</a></li>
-                    <li class="navbar-item"><a href="#!">Contact Us</a></li>
-                    <li class="navbar-item"><a href="#!">More &#8744;</a></li>
+                    <li class="navbar-item"><a class="navbar-link" href="#!">Home</a></li>
+                    <li class="navbar-item"><a class="navbar-link" href="#!">Products &#8744;</a></li>
+                    <li class="navbar-item"><a class="navbar-link" href="#!">Calendar</a></li>
+                    <li class="navbar-item"><a class="navbar-link" href="#!">Contact Us</a></li>
+                    <li class="navbar-item"><a class="navbar-link" href="#!">More &#8744;</a></li>
                 </ul>
             </div>
             <div class="navbar__right">
@@ -48,9 +48,9 @@
                     <button type="search"><i class="fa-solid fa-magnifying-glass"></i></button>
                 </form>
                 <ul class="navbar__list">
-                    <li class="navbar-item"><a href="#!"><i class="fa-solid fa-magnifying-glass-plus"></i></a></li>
-                    <li class="navbar-item"><a href="#!"><i class="fa-solid fa-cart-shopping"></i></a></li>
-                    <li class="navbar-item"><a href="#!"><i class="fa-solid fa-user"></i></a></li>
+                    <li class="navbar-item"><a class="navbar-link" href="#!"><i class="fa-solid fa-magnifying-glass-plus"></i></a></li>
+                    <li class="navbar-item"><a class="navbar-link" href="#!"><i class="fa-solid fa-cart-shopping"></i></a></li>
+                    <li class="navbar-item"><a class="navbar-link" href="#!"><i class="fa-solid fa-user"></i></a></li>
                 </ul>
             </div>
         </div>
@@ -71,4 +71,37 @@
         </div>
     </div>
 </body>
+<h2>footer</h2>
+<footer>
+    <div class="footer-container">
+        <div class="footer__section">
+            <h2 class="footer__title"><span>About Us</span></h2>
+            <p><strong>Lodestone Coffee and Games</strong><br>
+            10982 Cedar Lake Road<br>
+            Minnetonka, MN 55305<br>
+            952-657-5226</p>
+
+            <p>Store Hours:<br>
+            Mon-Fri 10a-8p<br>
+            Sat-Sun 9a-8p</p>
+
+            <p><a class="footer__link" href="#!"><strong>Contact Us</strong></a></p>
+            
+            <ul class="social">
+                <li class="social-icon"><a href="#!"></a><i class="fa-brands fa-facebook"></i></li>
+                <li class="social-icon"><a href="#!"></a><i class="fa-brands fa-instagram"></i></li>
+                <li class="social-icon"><a href="#!"><i class="fa-brands fa-x-twitter"></i></a></li>
+            </ul>
+        </div>
+        <div class="footer__section">
+            <h2 class="footer__title"><span>Grading & Conditions</span></h2>
+            <p>We grade every <em>Magic</em> card in our inventory carefully so you can be certain you know exactly what you’re paying for. For more details on Lodestone’s grading system, consult the <a class="footer__link" href="#!"><strong>Condition Guide.</strong></a></p>
+        </div>
+        <div class="footer__section">
+       <h2 class="footer__title"><span>Disclaimers</span></h2>
+            <a class="footer__link" href="#!"><strong>Privacy Policy</strong></a>
+            <a class="footer__link" href="#!"><strong>Terms and Conditions</strong></a>
+        </div>
+    </div>
+</footer>
 </html>
