--- a/css/main.css
+++ b/css/main.css
@@ -49,7 +49,7 @@ body {
     padding: 1rem 1rem;
 }
 
-a {
+.navbar-link {
     text-decoration: none;
     color: var(--nav-font);
     text-transform: uppercase;
@@ -154,6 +154,59 @@ header {
     position:relative;
     bottom: 3.34rem;
 }
+
+footer {
+    display: flex;
+    background-color: var(--footer-background);
+    color: var(--footer-body);
+    justify-content: space-between;
+}
+
+.footer__section {
+    display: flex;
+    margin: 1.5rem;
+    flex-direction: column;
+    width: 31.32%;
+    float: left;
+    font-weight: 400;
+    font-size: 13px;
+}
+
+.footer-container {
+    display: flex;
+    gap: 5rem;
+    max-width: 1300px;
+    margin: 0 auto;
+}
+
+.footer__title {
+    color: var(--footer-head);
+    font-size: 15px;
+}
+
+.footer__link {
+    color: #1F618D;
+}
+
+span {
+    border-bottom: solid var(--nav-font);
+    padding-bottom: .5rem;
+}
+
+.social {
+    list-style: none;
+    display: flex;
+}
+
+.social-icon {
+    margin: .8rem;
+    font-size: 2rem;
+}
+
+p {
+    line-height: 1.5rem;
+}
+
 
 
 
