--- a/components/index.html
+++ b/components/index.html
@@ -21,7 +21,7 @@
             </div>
             <div class="header__right">
                 <div class="cart-icon">
-                    <a href="#!"><i class="fa-sharp fa-solid fa-cart-shopping"></i></a>
+                    <a href="#!"><i class="fa-sharp fa-solid fa-cart-shopping"></i><p class="cart-icon__number">0</p></a>
                 </div>
                 <div class="my-cart">
                     <div class="my-cart__total">Total</div>
@@ -104,4 +104,6 @@
         </div>
     </div>
 </footer>
+<p class="legal">© 2024 • Lodestone Coffee and Games, LLC • All Rights Reserved
+</p>
 </html>
