add dropdown in nav

--- a/components/index.html
+++ b/components/index.html
@@ -36,7 +36,17 @@
             <div class="navbar__left">
                 <ul class="navbar__list">
                     <li class="navbar-item"><a class="navbar-link" href="#!">Home</a></li>
-                    <li class="navbar-item"><a class="navbar-link" href="#!">Products &#8744;</a></li>
+                    <li class="navbar-item">
+                        <div class="dropdown">
+                            <button class="dropbtn"><a href="#!">Products&#8744;</a></button>
+                            <div class="dropdown-content">
+                                <a href="#!">MAGIC SINGLES</a>
+                                <a href="#!">SEALED</a>
+                                <a href="#!">EVENT SIGN UP</a>
+                                <a href="#!">DUNGEONS & DRAGONS</a>
+                            </div>
+                        </div>
+                    </li>
                     <li class="navbar-item"><a class="navbar-link" href="#!">Calendar</a></li>
                     <li class="navbar-item"><a class="navbar-link" href="#!">Contact Us</a></li>
                     <li class="navbar-item"><a class="navbar-link" href="#!">More &#8744;</a></li>
@@ -57,7 +67,7 @@
     </div>
     <h2>hero</h2>
     <div class="hero">
-        <div clas="panel">
+        <div class="panel">
             <a class="hero__panel" href="#!"><img class="hero-img" src="../img/singles.jpg" alt="magic singles"></a>
             <h2 class="panel-title">MAGIC SINGLES</h2>
         </div>
