--- a/css/main.css
+++ b/css/main.css
@@ -55,6 +55,53 @@ body {
     text-transform: uppercase;
 }
 
+.dropbtn{
+    background-color: var(--nav-background);
+    color: var(--nav-font);
+    font-size: .9rem;
+    border: none;
+    text-transform: uppercase;   
+    font-weight: bold;
+    margin-right:4rem;   
+}
+
+.dropbtn a {
+    text-decoration: none;
+    color: var(--nav-font);
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    border: thin solid black;
+    background-color: white;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    border: thin solid var(--nav-background);
+  }
+  
+
+.dropdown-content a:hover {
+    background-color: #ddd;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
 input {
     border: thin solid var(--nav-font);
     border-radius: .5rem 0 0 .5rem;
