--- a/components/index.html
+++ b/components/index.html
@@ -49,7 +49,16 @@
                     </li>
                     <li class="navbar-item"><a class="navbar-link" href="#!">Calendar</a></li>
                     <li class="navbar-item"><a class="navbar-link" href="#!">Contact Us</a></li>
-                    <li class="navbar-item"><a class="navbar-link" href="#!">More &#8744;</a></li>
+                    <li class="navbar-item">
+                        <div class="dropdown">
+                            <button class="dropbtn"><a href="#!">MORE&#8744;</a></button>
+                            <div class="dropdown-content">
+                                <a href="#!">D & D</a>
+                                <a href="#!">USED GAMES</a>
+                                <a href="#!">JOBS</a>
+                            </div>
+                        </div>
+                    </li>
                 </ul>
             </div>
             <div class="navbar__right">
