adds reference images

--- a/components/index.html
+++ b/components/index.html
@@ -16,7 +16,10 @@
 </head>
 <body>
     <h1>Components Go Here</h1>
-    <h2>header</h2>
+    <h2 class="comp-title">header</h2>
+    <h3>image</h3>
+    <img class="comp-img" src="../img/main-header.png" alt="header image">
+    <h3>code</h3>
     <header>
         <div class="header">
             <div class="header__left">
@@ -33,7 +36,10 @@
             </div>
         </div>
     </header>
-    <h2>navbar</h2>
+    <h2 class="comp-title">navbar</h2>
+    <h3>image</h3>
+    <img class="comp-img" src="../img/main-navbar.png" alt="navbar image">
+    <h3>code</h3>
     <div class="navbar-container">
         <div class="navbar">
             <div class="navbar__left">
@@ -77,23 +83,29 @@
             </div>
         </div>
     </div>
-    <h2>hero</h2>
+    <h2 class="comp-title">hero</h2>
+    <h3>image</h3>
+    <img class="comp-img" src="../img/main-section.png" alt="hero img">
+    <h3>code</h3>
     <div class="hero">
         <div class="panel">
             <a class="hero__panel" href="#!"><img class="hero-img" src="../img/singles.jpg" alt="magic singles"></a>
             <h2 class="panel-title">MAGIC SINGLES</h2>
         </div>
         <div class="panel">
-           <a class="hero__panel" href="#!"><img class="hero-img" src="../img/fdn.png" alt="foundations"></a>
-           <h2 class="panel-title">FDN SINGLES NOW AVAILABLE</h2>
+        <a class="hero__panel" href="#!"><img class="hero-img" src="../img/fdn.png" alt="foundations"></a>
+        <h2 class="panel-title">FDN SINGLES NOW AVAILABLE</h2>
         </div>
         <div class="panel">
-           <a class="hero__panel" href="#!"><img class="hero-img" src="../img/event.png" alt="events"></a>
-           <h2 class="panel-title">EVENT SIGN UP</h2>
+        <a class="hero__panel" href="#!"><img class="hero-img" src="../img/event.png" alt="events"></a>
+        <h2 class="panel-title">EVENT SIGN UP</h2>
         </div>
     </div>
 </body>
-<h2>footer</h2>
+<h2 class="comp-title">footer</h2>
+<h3>image</h3>
+<img class="comp-img" src="../img/footer.png" alt="footer img">
+<h3>code</h3>
 <footer>
     <div class="footer-container">
         <div class="footer__section">
@@ -120,7 +132,7 @@
             <p>We grade every <em>Magic</em> card in our inventory carefully so you can be certain you know exactly what you’re paying for. For more details on Lodestone’s grading system, consult the <a class="footer__link" href="#!"><strong>Condition Guide.</strong></a></p>
         </div>
         <div class="footer__section">
-       <h2 class="footer__title"><span>Disclaimers</span></h2>
+    <h2 class="footer__title"><span>Disclaimers</span></h2>
             <a class="footer__link" href="#!"><strong>Privacy Policy</strong></a>
             <a class="footer__link" href="#!"><strong>Terms and Conditions</strong></a>
         </div>
