--- a/css/main.css
+++ b/css/main.css
@@ -192,7 +192,7 @@ header {
 }
 
 .hero {
-    margin: 0 auto;
+    margin: 3rem auto;
     display: flex;
     flex-direction: row;
     justify-content: center;
