--- a/css/main.css
+++ b/css/main.css
@@ -196,11 +196,11 @@ header {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    overflow: hidden;
 }
 
 .panel {
     overflow: hidden;
+    height: 600px;
 }
 
 .hero__panel {
